# Cloud-Technical-Architect

./: Argo-Workflow-CN-Guide.md  Automated_AWS_Incident_Response_Bot_Practice.md  ECS_Service_Connect_Deep_Dive_and_Comparison_CN.md  Linux系统内核性能瓶颈定位处理指南.md  README.md  README.md.bak  Serverless_MCP_on_AWS_技术文档.md  automated-patch-management-and-security-compliance-on-public-cloud.md  事务的选择.md  云上CAE_CFD工作负载的数据架构现代化对比实践.md  云原生HPC平台高级成本优化策略实践.md  异构云环境中间件选型与治理规范.md  数据库性能压测与优化实践指导方法.md
AI_MCP/: .coderabbit.yaml  .gitignore  README.md  requirements.txt
Bedrock_Model_Cost_Track_new/: README.md
Dev_MLOps/: README.md  requirements.txt
GitHubActions_AWS_Lambda/: MOCK_TESTING.md  README.md  index.js  lambda_github_actions_deployment.md  package-lock.json  package.json
MLOps_CICD/: README.md  aws_profiles.py  deploy.py  profiles.conf  test.ipynb  training_pipeline.py  upload_dataset.py
aws-incident-response-bot-repo/: README.md  backend.tf  lambda_function.py  main.tf  output.tf  prod.tfvars  variables.tf
aws-terraform-hybrid-dns/: README.md  README.zh-CN.md
aws_movie_recommender/: Dockerfile  README.md  build_and_push.sh
bedrock_agent_deployment_project/: .env.example  Dockerfile  README.md  pyproject.toml
bedrock_agent_deployment_project/scripts/: invoke_agent.py
bedrock_agent_deployment_project/src/agent/: main.py
best-practices/: AWS_API_Gateway_mTLS配置详解与常见陷阱规避.md  Build a Data Lake Using Lake Formation on AWS_CN.md  Database_Proxy_Services_Technical_Whitepaper.md  Deploying a recommender system on the cloud_CN.md  DynamoDB_Model_Evolution_Strategy_CN.md  (+8 more)
(+215 files in other folders)
