[project]
name = "bedrock-agent-deployment-example"
version = "0.1.0"
description = "An example project demonstrating how to deploy a Python AI agent to AWS Bedrock AgentCore."
authors = [{ name = "Your Name", email = "your@email.com" }]
requires-python = ">=3.9"

# 项目的核心依赖项
dependencies = [
    "bedrock-agentcore",
    "langchain-core",
    "langgraph",
    "uvicorn",
    # 添加 boto3 用于与 AWS API 交互
    "boto3",
    # Pydantic 通常是 LangChain 的一部分，但明确列出以确保兼容性
    "pydantic"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
bedrock-agent-deployment-example = { path = "." }
